// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Story Page A11y I can see the skip to content link 1`] = `"Tsallaka zuwa abubuwan da ke ciki"`;

exports[`Canonical Story Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Story Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Story Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "51",
  },
  {
    "p": "hausa.news.story.23246985.page",
  },
  {
    "x1": "[urn:bbc:cps:curie:asset:142c7232-ebaf-2d4e-8e70-6b68dda2f199]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-hausa]",
  },
  {
    "x4": "[ha]",
  },
  {
    "x7": "[article]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Ɗanɗano:%20Kuskure%20a%20Hausa%20da%20Ƙa’idar%20hira%20da%20baƙì%20-%20Ɓ%20ɓ%20ɗ%20Ɗ%20ƙ%20Ƙ%20-%20BBC%20News%20Hausa]",
  },
  {
    "x11": "[2019-08-20T12:21:00.000Z]",
  },
  {
    "x12": "[2019-08-20T12:21:00.000Z]",
  },
]
`;

exports[`Canonical Story Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Hausa",
  "url": "/hausa",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 2`] = `
{
  "text": "Me ya sa za ku iya aminta da BBC",
  "url": "https://www.bbc.com/hausa/game-da-mu-49283501",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 3`] = `
{
  "text": "Sharuddan yin amfani",
  "url": "https://www.bbc.com/hausa/game-da-mu-37377086",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 4`] = `
{
  "text": "A game da BBC",
  "url": "https://www.bbc.com/hausa/game-da-mu-37377088",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 5`] = `
{
  "text": "Ka'idojin tsare sirri",
  "url": "https://www.bbc.com/hausa/game-da-mu-37377090",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 6`] = `
{
  "text": "Ka'idoji",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 7`] = `
{
  "text": "Tuntubi BBC",
  "url": "https://www.bbc.co.uk/hausa/send/u50853335",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 8`] = `
{
  "text": "Labaran BBC a sauran harsuna",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 9`] = `
{
  "text": "Do not share or sell my info",
  "url": "#",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 10`] = `
{
  "text": "Karanta hanyoyin da muke bi dangane da adireshin waje.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Story Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/hausa"`;

exports[`Canonical Story Page Footer Paragraphs should match text 1`] = `"© 2026 BBC. BBC ba za ta dauki alhakin abubuwan da wasu shafukan daban suka wallafa ba.  Karanta hanyoyin da muke bi dangane da adireshin waje."`;

exports[`Canonical Story Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Hausa",
  "svg": <path
    d="M759.927 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.193a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.266 36.647v-72.699h22.004V265.75h-23.193zM804.186 159.452h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.1 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.441-35.977 2391.54 2391.54 0 01-9.217 35.977 2452.296 2452.296 0 01-9.812 35.978H919.51a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.069-35.63-13.231-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.77 40.586 3259.894 3259.894 0 0018.882-77.456h22.3a3251.95 3251.95 0 0018.732 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.531a1845.28 1845.28 0 01-13.23 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.47 267.98c-5.849 0-11.621-.645-17.32-1.932a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.747 9.663 6.74 0 11.869-1.138 15.388-3.419 3.517-2.28 5.277-5.45 5.277-9.515 0-3.07-.868-5.475-2.601-7.21-1.735-1.733-4.04-3.122-6.914-4.163-2.875-1.04-6.095-2.007-9.663-2.899-5.849-1.387-11.001-2.974-15.462-4.757-4.46-1.784-8.227-3.889-11.298-6.319-3.073-2.427-5.403-5.352-6.988-8.771-1.586-3.42-2.378-7.508-2.378-12.265 0-6.74 1.71-12.537 5.129-17.395 3.42-4.855 8.25-8.597 14.495-11.225 6.244-2.624 13.678-3.939 22.3-3.939 5.65 0 11.2.646 16.651 1.933 5.45 1.289 10.356 3.024 14.719 5.203v20.22c-4.363-2.677-9.292-4.758-14.793-6.245-5.5-1.487-11.027-2.23-16.577-2.23-6.046 0-10.73 1.04-14.049 3.122-3.321 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.378 6.616 1.585 1.635 3.84 2.973 6.765 4.014 2.922 1.04 6.367 2.058 10.332 3.047 5.055 1.29 9.761 2.702 14.124 4.238 4.36 1.537 8.2 3.493 11.521 5.872 3.32 2.379 5.896 5.403 7.731 9.069 1.834 3.668 2.75 8.177 2.75 13.529 0 7.038-1.735 13.06-5.202 18.063-3.47 5.006-8.475 8.823-15.016 11.447-6.542 2.626-14.421 3.94-23.639 3.94z"
  />,
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 1`] = `
{
  "text": "Labaran Duniya",
  "url": "/hausa",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 2`] = `
{
  "text": "Wasanni",
  "url": "/hausa/topics/cz74kjgv220t",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 3`] = `
{
  "text": "Nishadi",
  "url": "/hausa/topics/cg726kz37wdt",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 4`] = `
{
  "text": "Cikakkun Rahotanni",
  "url": "/hausa/topics/cnl7wd77wj2t",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 5`] = `
{
  "text": "Bidiyo",
  "url": "/hausa/topics/cn09qmz4jryt",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 6`] = `
{
  "text": "Shirye-shirye na Musamman",
  "url": "/hausa/topics/cnl7wd9pddlt",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 7`] = `
{
  "text": "Shirye-shiryen rediyo",
  "url": "/hausa/topics/c4nx34q5724t",
}
`;

exports[`Canonical Story Page Image Caption should match text 1`] = `"Bayanan sautiमुंबई इंडियन्सला आता दुसऱ्या क्वॉलिफायर लढतीत खेळावे लागणार आहे."`;

exports[`Canonical Story Page Image should match snapshot 1`] = `
<noscript
  class="css-n2zqlz"
>
  <strong>
    Na'urarku na da matsalar sauraren sauti
  </strong>
</noscript>
`;

exports[`Canonical Story Page Lead image I can see an image with a caption 1`] = `"Bayanan sautiमुंबई इंडियन्सला आता दुसऱ्या क्वॉलिफायर लढतीत खेळावे लागणार आहे."`;

exports[`Canonical Story Page Main heading should match text 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ"`;

exports[`Canonical Story Page Most Read has item with rank 1`] = `
{
  "text": "Zuma ya fuskanci koma baya kan cin hanci 32",
  "url": "/hausa/23057301",
}
`;

exports[`Canonical Story Page Most Read has item with rank 2`] = `
{
  "text": "Zuma ya fuskanci koma baya kan cin hanci 3",
  "url": "/hausa/23055778",
}
`;

exports[`Canonical Story Page Most Read has item with rank 3`] = `
{
  "text": "Zuma ya fuskanci koma baya kan cin hanci 11",
  "url": "/hausa/23055796",
}
`;

exports[`Canonical Story Page Most Read has item with rank 4`] = `
{
  "text": "Zuma ya fuskanci koma baya kan cin hanci 23",
  "url": "/hausa/23055836",
}
`;

exports[`Canonical Story Page Most Read has item with rank 5`] = `
{
  "text": "Zuma ya fuskanci koma baya kan cin hanci 34",
  "url": "/hausa/23057304",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/hausa/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Story Page SEO Canonical link 1`] = `"http://localhost:7081/hausa/labarai-23246985"`;

exports[`Canonical Story Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Story Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Story Page SEO Heading level 1 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ"`;

exports[`Canonical Story Page SEO Lang attribute 1`] = `"ha"`;

exports[`Canonical Story Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "Person",
        "name": "Kalkidan Yibeltal",
      },
      "dateModified": "2019-08-20T12:21:00.000Z",
      "datePublished": "2019-08-20T12:21:00.000Z",
      "description": "French football fans sing God Save The Queen ahead of the match between France and England in tribute to the victims of attacks in London and Manchester.",
      "headline": "Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_hausa/1745C/test/_63542359_hi035712328.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ha",
        "name": "Hausa",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/hausa/labarai-23246985",
        "@type": "WebPage",
        "name": "Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/hausa/images/metadata/poster-1024x576.png",
          "width": 1024,
        },
        "name": "BBC News Hausa",
        "publishingPrinciples": "https://www.bbc.com/hausa/game-da-mu-49283501",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_hausa/1745C/test/_63542359_hi035712328.jpg",
      "url": "http://localhost:7081/hausa/labarai-23246985",
    },
  ],
}
`;

exports[`Canonical Story Page SEO Linked data should match text 2`] = `
{
  "@context": "http://schema.org",
  "@type": "AudioObject",
  "description": "मुंबई इंडियन्सला आता दुसऱ्या क्वॉलिफायर लढतीत खेळावे लागणार आहे.",
  "duration": "PT16S",
  "embedURL": "https://www.test.bbc.com/hausa/av-embeds/labarai-23246985/vpid/p01b7w2z",
  "name": "पुणे सुपरजायंट्स आयपीएलच्या अंतिम फेरीत!",
  "thumbnailUrl": "https://ichef.test.bbci.co.uk/images/ic/1024x576/p01b7w9z.jpg",
  "uploadDate": "2017-05-22T15:38:23.000Z",
}
`;

exports[`Canonical Story Page SEO OG description 1`] = `"French football fans sing God Save The Queen ahead of the match between France and England in tribute to the victims of attacks in London and Manchester."`;

exports[`Canonical Story Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_hausa/1745C/test/_63542359_hi035712328.jpg"`;

exports[`Canonical Story Page SEO OG image alt 1`] = `"hai;le"`;

exports[`Canonical Story Page SEO OG locale 1`] = `"ha-GH"`;

exports[`Canonical Story Page SEO OG site name 1`] = `"BBC News Hausa"`;

exports[`Canonical Story Page SEO OG title 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ - BBC News Hausa"`;

exports[`Canonical Story Page SEO OG type 1`] = `"article"`;

exports[`Canonical Story Page SEO OG url 1`] = `"http://localhost:7081/hausa/labarai-23246985"`;

exports[`Canonical Story Page SEO Page title 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ - BBC News Hausa"`;

exports[`Canonical Story Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Story Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Story Page SEO Twitter creator 1`] = `"@bbchausa"`;

exports[`Canonical Story Page SEO Twitter description 1`] = `"French football fans sing God Save The Queen ahead of the match between France and England in tribute to the victims of attacks in London and Manchester."`;

exports[`Canonical Story Page SEO Twitter image alt 1`] = `"hai;le"`;

exports[`Canonical Story Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_hausa/1745C/test/_63542359_hi035712328.jpg"`;

exports[`Canonical Story Page SEO Twitter site 1`] = `"@bbchausa"`;

exports[`Canonical Story Page SEO Twitter title 1`] = `"Ɗanɗano: Kuskure a Hausa da Ƙa’idar hira da baƙì - Ɓ ɓ ɗ Ɗ ƙ Ƙ - BBC News Hausa"`;

exports[`Canonical Story Page Timestamp should match text and date 1`] = `
{
  "date": "2019-08-20",
  "text": "20 Agusta 2019",
}
`;
